--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sprig-rs",
+  "name": "sprigsy",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.14",
     "autoprefixer": "^10.4.20",
+    "babel-walk": "^3.0.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
@@ -24,12 +25,13 @@
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
-  },
-  "type": "module",
-  "dependencies": {
+    "vite": "^5.0.3",
+    "@babel/parser": "^7.25.3",
     "@sveltejs/adapter-static": "^3.0.4",
+    "constrained-editor-plugin": "^1.3.0",
     "monaco-editor": "^0.50.0",
+    "sprig": "^1.1.3",
     "sveltekit-adapter-deno": "^0.12.1"
-  }
+  },
+  "type": "module"
 }
